# fosanalysis

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  pyproject.toml
.github/workflows/: documentation.yml
doc/: CodingStyleGuide.md  FosAnalysis_CodingStyleGuide.md  GettingStarted.md  references.bib
examples/: generatedemofile.py  gettingstarted.py
fosanalysis/: __init__.py  cracks.py  cropping.py  filtering.py  finding.py  fosutils.py  integration.py  protocols.py  sensor.py  separation.py  shrinking.py  strainprofile.py  tensionstiffening.py
fosanalysis/preprocessing/: __init__.py  masking.py
fosanalysis/sanitation/: __init__.py  filtering.py  masking.py  repair.py
src/: concretebehaviour.py  fosanalysis.py  fosdata.py
src/fosanalysis/: __init__.py  cracks.py  cropping.py  finding.py  fosutils.py  integration.py  protocols.py  separation.py  strainprofile.py  tensionstiffening.py
src/fosanalysis/compensation/: __init__.py  compensator.py  shrinking.py  tensionstiffening.py
src/fosanalysis/crackmonitoring/: __init__.py  cracks.py  finding.py  separation.py  strainprofile.py
src/fosanalysis/preprocessing/: __init__.py  aggregate.py  base.py  ensemble.py  filtering.py  masking.py  preprocessingbase.py  repair.py  resizing.py
src/fosanalysis/preprocessing/resizing/: __init__.py  aggregate.py  downsampling.py  resampling.py
src/fosanalysis/utils/: __init__.py  base.py  cropping.py  integration.py  interpolation.py  misc.py  windows.py
